GL/Projet_GL/src/test/deca/context/valid/methods/simple_method_override.deca
// Test : override_method_ok
// But : vérifier qu’une sous-classe peut redéfinir une méthode avec la même signature.
// Couvre : héritage, redéfinition (override) valide.
// Résultat attendu : compilation sans erreur.

class A {
    int f() {
        return 1;
    }
}
class B extends A {
    int f() {
        return 2;
    }
}
{
}
